<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mbako</string>
    <string name="splash_text_logo">Bid your tabacco now</string>
    <string name="welcome_text">Hi, Selamat Datang di</string>
    <string name="UI_validation_invalid_email">Format email tidak valid</string>
    <string name="UI_validation_password_rules">Password harus berisi minimal 8 karakter</string>
    <string name="email_text">Email</string>
    <string name="username_text">Username</string>
    <string name="token_text">Token</string>
    <string name="contact_text">Kontak</string>
    <string name="password_text">Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="login_button">Login</string>
    <string name="register_button">Daftar</string>
    <string name="btn_reset_pass">Reset</string>
    <string name="btn_send">Kirim</string>
    <string name="const_text_auth_question_login">Belum punya akun?</string>
    <string name="const_text_register">Daftar</string>
    <string name="name_text">Nama</string>
    <string name="title_signup_page">Buat Sebuah Akun</string>
    <string name="const_text_auth_question_register">Sudah punya akun?</string>
    <string name="const_text_login">Masuk</string>
    <string name="button_text_ok">ok</string>
    <string name="const_lorem_ipsum">Lorem Ipsum</string>
    <string name="UI_info_successful_register_user">Register pengguna baru berhasil, silahkan tekan tombol ok untuk menuju ke halaman login</string>
    <string name="UI_info_successful_getToken">Token berhasil dikirim ke email, silahkan tekan tombol ok untuk menuju ke halaman reset password</string>
    <string name="UI_info_successful_login_user">Login pengguna berhasil, silahkan tekan tombol ok untuk menuju ke halaman menu</string>
    <string name="UI_info_successful_reset_password">Reset password berhasil, silahkan tekan tombol ok untuk menuju ke halaman login</string>
    <string name="UI_info_successful_sell">Jual barang berhasil, silahkan tekan tombol ok untuk menuju ke halaman home</string>
    <string name="UI_info_successful_buy">Beli barang berhasil, terimakasih telah berbelanja di toko kami </string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_name">Masukkan nama</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="save_btn">Simpan</string>
    <string name="logout_btn">Keluar</string>
    <string name="const_text_setting">Pengaturan</string>
    <string name="const_text_change_language">Ubah Bahasa</string>
    <string name="content_description_btn_app_setting">Buka pengaturan terkait</string>
    <string name="const_text_permission">Atur Permission Aplikasi</string>
    <string name="content_description_avatar_dico">Avatar Dicoding</string>
    <string name="text_contact">08xxxxxxxxxxx</string>
    <string name="login_on">Login pada </string>
    <string name="txt_new_email">Masukkan Email Baru</string>
    <string name="txt_new_pass">Masukkan Password Baru</string>
    <string name="edt_new_email">Email Baru</string>
    <string name="edt_new_password">Password Baru</string>
    <string name="edt_new_password_confirm">Konfirmasi Kata Sandi Baru</string>
    <string name="btn_update">Update</string>
    <string name="txt_new_password">Masukkan Password Lama</string>
    <string name="txt_confirm_password">Konfirmasi Password</string>
    <string name="change_password">Ganti Password</string>
    <string name="UI_validation_username_exists">Username sudah terdaftar</string>
    <string name="UI_validation_empty_username_contact_email_password">Username, Contact, Email dan Password harus diisi</string>
    <string name="UI_validation_email_exists">Email sudah terdaftar</string>
    <string name="UI_validation_email_noExist">Email belum terdaftar</string>
    <string name="UI_validation_empty_username_password">Username dan Password harus diisi</string>
    <string name="UI_validation_empty_email">Email harus diisi</string>
    <string name="UI_validation_empty_username_token_password">Username, token, dan password harus diisi</string>
    <string name="UI_validation_stock">Barang yang anda ingin beli masih 0</string>

    <string name="reset_password">Reset Password</string>
    <string name="masukkan_email_txt">Masukkan Email</string>
    <string name="btn_reset">Reset Password</string>
    <string name="forgot_password_text">Lupa Password</string>
    <string name="dialog_error">Error Dialog</string>
    <string name="error_message_login_failed">Gagal masuk. Silakan periksa email dan kata sandi Anda.</string>

    <string name="txt_dashboard">Dashboard</string>
    <string name="toolbar_forgot">Lupa Password</string>
    <string name="txt_scan_tabacco">Scan Tabacco</string>
    <string name="txt_buy">Beli Tabacco</string>
    <string name="txt_scan">Scan Tabacco</string>
    <string name="txt_list">List Tabacco</string>
    <string name="txt_sell">Jual</string>
    <string name="txt_bid">Bid</string>
    <string name="txt_upload">Unggah dari file</string>
    <string name="txt_retry">Mencoba kembali</string>
    <string name="txt_hasil">Hasil</string>
    <string name="const_text_try_again">Coba lagi</string>

    <string name="API_error_header_token">Kamu tidak memiliki akses, silahkan login ulang untuk renewal Token</string>
    <string name="content_descrption_btn_gallery">Pilih gambar dari Galeri</string>
    <string name="txt_picture">Gambar</string>
    <string name="txt_product_name">Nama Produk</string>
    <string name="txt_price">Harga</string>
    <string name="txt_increment">Increment</string>
    <string name="txt_stok">Stok</string>
    <string name="btn_sell">Jual</string>
    <string name="btn_buy">Beli</string>
    <string name="txt_stok_sisa">6</string>
    <string name="menu_title_refresh">Refresh</string>
    <string name="hint_email_forgot">Masukkan Email</string>

    <string name="btn_plus">+1</string>
    <string name="btn_minus">-1</string>

    <string name="txt_jenis_tembakau">Tembakau garangan 2 rigen</string>
    <string name="txt_open_bid">Rp30.0000</string>
    <string name="txt_stok_barang">Stok 4</string>

    <string name="API_error">Validation Error</string>
    <string name="API_error_send_payload">Eror ketika mengirim gambar</string>
    <string name="API_error_large_payload">Gambar kamu melebihi batas maks 1 MB, silahkan pilih gambar lain</string>
    <string name="UI_validation_empty_data">Lengkapi semua data</string>
    <string name="API_success_auction">Yeay 😘, Auction berhasil</string>
    <string name="const_text_uploaded">Diunggah</string>
    <string name="const_text_time_on">pada</string>
    <string name="const_text_seconds_ago">detik yang lalu</string>
    <string name="const_text_minutes_ago">menit yang lalu</string>
    <string name="const_text_hours_ago">jam yang lalu</string>
    <string name="const_text_days_ago">hari yang lalu</string>

    <string name="content_description_btn_camera_back">Tombol kembali ke halaman utama</string>
    <string name="content_description_btn_shutter_camera">Ambil Gambar</string>
    <string name="content_description_btn_switch_camera">Putar arah Kamera</string>
    <string name="UI_error_camera_take_photo">Gagal mengambil gambar</string>
    <string name="uploded">diupload beberapa waktu lalu</string>

</resources>