<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="15dp"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:paddingVertical="15dp"
    android:id="@+id/card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/items_image"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitXY"
            android:transitionName="items_image"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_tembakau" />

        <TextView
            android:id="@+id/tv_jenis_tembakau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_jenis_tembakau"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="tv_jenis_tembakau"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/items_image" />

        <TextView
            android:id="@+id/tv_stok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/txt_stok_barang"
            android:textSize="14sp"
            android:transitionName="tv_stok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_bid" />

        <TextView
            android:id="@+id/tv_start_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/txt_open_bid"
            android:textSize="14sp"
            android:transitionName="tv_start_bid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenis_tembakau" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>